--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/740845.svg" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link href="https://fonts.googleapis.com/css?family=Merriweather|Nunito" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 		<meta
 		name="viewport"
 		content="width=device-width, initial-scale=1, shrink-to-fit=no"
