--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/740845.svg" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-		<meta
-		name="viewport"
-		content="width=device-width, initial-scale=1, shrink-to-fit=no"
-		/>
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="theme-color" content="#000000" />
 		<!--
 		manifest.json provides metadata used when your web app is added to the
